fix: upgrade bootstrap to latest v4 (#1180)
* fix: upgrade bootstrap to latest v4

* fix: fix sass deprecation warnings and missing scss variable

* fix: sass calc deprecation warnings

* chore: remove extra space

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -661,7 +661,7 @@ $h4-mobile-font-size:         $h4-font-size !default;
 $h5-mobile-font-size:         $h5-font-size !default;
 $h6-mobile-font-size:         $h6-font-size !default;
 
-$headings-margin-bottom:      $spacer / 2 !default;
+$headings-margin-bottom:      calc($spacer / 2) !default;
 $headings-font-family:        null !default;
 $headings-font-weight:        $font-weight-bold !default;
 $headings-line-height:        1.25 !default;
@@ -757,6 +757,16 @@ $input-btn-line-height-lg:    $line-height-lg !default;
 
 $input-btn-border-width:      $border-width !default;
 
+// Spinners
+
+// $spinner-width:           2rem !default;
+// $spinner-height:          $spinner-width !default;
+$spinner-vertical-align:  -.125em !default;
+// $spinner-border-width:    .25em !default;
+
+// $spinner-width-sm:        1rem !default;
+// $spinner-height-sm:       $spinner-width-sm !default;
+// $spinner-border-width-sm: .2em !default;
 
 // Utilities
 
