--- a/src/Form/_mixins.scss
+++ b/src/Form/_mixins.scss
@@ -21,9 +21,9 @@
   $border-width
 ) {
   .pgn__form-control-floating-label-text {
-    $half-leading: ($line-height - 0.8) / 2;
+    $half-leading: calc(($line-height - 0.8) / 2);
     $percent-height-minus-no-bottom-leading: (
-        ($line-height - $half-leading) / $line-height
+        calc(($line-height - $half-leading) / $line-height)
       ) * 100%;
     transform: translateY(-$padding-y) scale(.75)  translateY(-$percent-height-minus-no-bottom-leading);
   }
